--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 spring.application.name=txcuentas
 
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/txcuentas
+spring.datasource.url=jdbc:postgresql://localhost:5432/core_DB
+spring.datasource.username=postgres
+spring.datasource.password=postgresql
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 Server.port=8080
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
